--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-fontawesome": "^1.7.1",
     "react-medium-image-zoom": "^4.3.4",
     "react-owl-carousel": "^2.3.1",
-    "react-photoswipe-gallery": "^2.2.2",
+    "react-image-lightbox": "^5.1.4",
     "react-redux": "^7.2.4",
     "react-responsive-masonry": "^2.1.5",
     "react-router-dom": "^5.1.2",
